traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
      - name: traefik
        image: traefik:2.7
        args:
        - --api.insecure=true
        - --api.dashboard=true
        - --entrypoints.web.address=:80
        - --entrypoints.admin.address=:9090
        - --providers.kubernetesingress
        ports:
        - containerPort: 80
          name: web
        - containerPort: 9090
          name: admin
        resources:
          limits:
            memory: "128Mi"
