traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: kube-public
spec:
  type: NodePort
  ports:
  - name: web
    port: 80
    targetPort: 8000
    nodePort: 30021  # Port spécifié dans le PDF
  - name: admin
    port: 8080
    targetPort: 8080
    nodePort: 30042  # Pour le dashboard Traefik
  selector:
    app: traefik
